<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008DCA"
    tools:context="com.example.f5onz.testbluetooth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/droidino2" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mdp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/txt_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textAlignment="center"
            android:textColor="#006C9B" />

        <Button
            android:id="@+id/connect"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="#00A2E8"
            android:text="@string/connect"
            android:textColor="#99D9EA" />

        <TextView
            android:id="@+id/txt_sub"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_gravity="bottom"
            android:text="@string/sub"
            android:textAlignment="center"
            android:textColor="#006C9B" />

        <TextView
            android:id="@+id/err_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
